# data-how-you-want-it

./: README.md  package-lock.json  pyproject.toml  slides-pycon2025.html  slides-pycon2025.md  theater_sales.json  theater_sales.mongodb.js  theater_sales.validator.json
app/: main.py  mdb.py  models.py  util.py
aside/: demo_cursor.py  demo_silent.py
tests/: test_mdb.py  test_models.py  test_util.py
