[project]
name = "app"
version = "0.99.0"
description = "API exposing data, strong, fast, clean."
readme = "README.md"
authors = [
    { name = "Nuri H", email = "1554735+nurih@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "motor>=3.7.0",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
